update file paths

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <title>Resume</title>
 </head>
 <body>
@@ -53,7 +53,7 @@
                 <section class="home" id="home">
                     <div class="home_container section bd-grid">
                         <div class="home_data bd-grid">
-                            <img src="./img/photo_2020-09-20_16-34-51.jpg" alt="" class="home_img">
+                            <img src="./assets/img/photo_2020-09-20_16-34-51.jpg" alt="" class="home_img">
                             
                             <h1 class="home_title">Snezhana Bilonoga</h1>
                             <h3 class="home_profession">Front-end developer</h3>
@@ -211,6 +211,6 @@
     <a href="#" class="scrolltop" id="scroll-top">
         <i class="bx bx-up-arrow-alt scrolltop_icon"></i>
     </a>
-    <script src="./js/index.js"></script>
+    <script src="./assets/js/index.js"></script>
 </body>
 </html>
