add js formatting

--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
                         </a>
                     </li>
                     <li class="nav_item">
-                        <a href="#profile" class="nav_link">
-                            <i class="bx bx-user nav_icon">Profile</i>
-                        </a>
-                    </li>
-                    <li class="nav_item">
                         <a href="#education" class="nav_link">
                             <i class="bx bx-book nav_icon">Education</i>
                         </a>
@@ -33,6 +28,11 @@
                     <li class="nav_item">
                         <a href="#skills" class="nav_link">
                             <i class="bx bx-receipt nav_icon">Skills</i>
+                        </a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#profile" class="nav_link">
+                            <i class="bx bx-user nav_icon">Profile</i>
                         </a>
                     </li>
                     <li class="nav_item">
@@ -60,7 +60,7 @@
                         </div>
                         <div class="home_address bd-grid">
                             <span class="home_information">
-                                <i class="bx bx-map home_icon"></i>Kyiv
+                                <i class="bx bx-map home_icon"></i>Ukraine, Kyiv
                             </span>
                             <span class="home_information">
                                 <i class="bx bx-envelope home_icon"></i>snezhana.bilonoga16@gmail.com
@@ -119,7 +119,7 @@
                         </ul>
                     </div>
                 </section>
-                <section class="skills section" id="soft-skills">
+                <section class="skills section">
                     <h2 class="section-title">Soft Skills</h2>
 
                     <div class="skills_content bd-grid">
