--- a/index.html
+++ b/index.html
@@ -130,46 +130,6 @@
                             </div>
                         </div>
                     </section>
-                    <section class="skills section" id="skills">
-                        <h2 class="section-title">Tech Skills</h2>
-
-                        <div class="skills_content bd-grid">
-                            <ul class="skills_data">
-                                <li class="skills_name">
-                                    <span class="skills_circle"></span>HTML5
-                                </li>
-                                <li class="skills_name">
-                                    <span class="skills_circle"></span>CSS3
-                                </li>
-                                <li class="skills_name">
-                                    <span class="skills_circle"></span>SASS
-                                </li>
-                                <li class="skills_name">
-                                    <span class="skills_circle"></span
-                                    >JavaScript
-                                </li>
-                                <li class="skills_name">
-                                    <span class="skills_circle"></span>Basic
-                                    React
-                                </li>
-                                <li class="skills_name">
-                                    <span class="skills_circle"></span>Basic
-                                    NodeJS
-                                </li>
-                                <li class="skills_name">
-                                    <span class="skills_circle"></span>Basic
-                                    Express
-                                </li>
-                                <li class="skills_name">
-                                    <span class="skills_circle"></span>Basic
-                                    MongoDB
-                                </li>
-                                <li class="skills_name">
-                                    <span class="skills_circle"></span>Git
-                                </li>
-                            </ul>
-                        </div>
-                    </section>
                     <section class="skills section">
                         <h2 class="section-title">Soft Skills</h2>
 
@@ -203,7 +163,8 @@
                             start a career in IT. I tried a few directions and
                             eventually stopped on Front-End development. I had a
                             little experience in programming in university and
-                            currently I'm studying JavaScript by video courses.
+                            currently I'm studying Back-End/Front-End using
+                            JavaScript.
                         </p>
                     </section>
                     <section class="experience section" id="experience">
@@ -212,6 +173,26 @@
                         <div class="experience-container bd-grid">
                             <div class="experience_content">
                                 <div class="experience_data bd-grid">
+                                    <h3 class="experience_title">Node.js</h3>
+                                    <ul class="experience-courses">
+                                        <li class="experience-course-item">
+                                            InventorSoft Academy
+                                            Back-End(Node.js) Course
+                                            <ul>
+                                                <li
+                                                    class="experience-technologies"
+                                                >
+                                                    2 months lectures and tasks
+                                                </li>
+                                                <li
+                                                    class="experience-technologies"
+                                                >
+                                                    3 months team project
+                                                    development
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
                                     <h3 class="experience_title">JavaScript</h3>
                                     <ul class="experience-courses">
                                         <li class="experience-course-item">
@@ -240,6 +221,61 @@
                                     </ul>
                                 </div>
                             </div>
+                        </div>
+                    </section>
+                    <section class="technologies section">
+                        <h2 class="section-title">Technologies</h2>
+
+                        <div class="technologies_container">
+                            <ul class="technologies_content bd-grid">
+                                <li class="technologies_name">
+                                    <span class="technologies_circle"></span
+                                    >TypeScript
+                                </li>
+                                <li class="technologies_name">
+                                    <span class="technologies_circle"></span
+                                    >NestJS
+                                </li>
+                                <li class="technologies_name">
+                                    <span class="technologies_circle"></span
+                                    >PostgreSQL
+                                </li>
+                                <li class="technologies_name">
+                                    <span class="technologies_circle"></span
+                                    >TypeORM
+                                </li>
+                                <li class="technologies_name">
+                                    <span class="technologies_circle"></span
+                                    >NodeJS
+                                </li>
+                                <li class="technologies_name">
+                                    <span class="technologies_circle"></span
+                                    >Basic Express
+                                </li>
+                                <li class="technologies_name">
+                                    <span class="technologies_circle"></span
+                                    >Basic MongoDB
+                                </li>
+                                <li class="technologies_name">
+                                    <span class="technologies_circle"></span
+                                    >JavaScript
+                                </li>
+                                <li class="technologies_name">
+                                    <span class="technologies_circle"></span
+                                    >HTML5
+                                </li>
+                                <li class="technologies_name">
+                                    <span class="technologies_circle"></span
+                                    >CSS3
+                                </li>
+                                <li class="technologies_name">
+                                    <span class="technologies_circle"></span
+                                    >SASS
+                                </li>
+                                <li class="technologies_name">
+                                    <span class="technologies_circle"></span>Git
+                                </li>
+                            </ul>
                         </div>
                     </section>
                     <section class="languages section">
