--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                                 <h1 class="home_title">Snezhana Bilonoga</h1>
                                 <h3 class="home_profession">
-                                    Front-end developer
+                                    Back-end developer
                                 </h3>
                             </div>
                             <div class="home_address bd-grid">
@@ -312,7 +312,7 @@
                             </div>
                             <div class="interests_content">
                                 <i class="bx bx-book-reader interests_icon"></i>
-                                <span class="interests_name">Read</span>
+                                <span class="interests_name">Reading</span>
                             </div>
                         </div>
                     </section>
