--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                                 <h1 class="home_title">Snezhana Bilonoga</h1>
                                 <h3 class="home_profession">
-                                    Back-end developer
+                                    Back-End developer
                                 </h3>
                             </div>
                             <div class="home_address bd-grid">
